# fastapi-blog

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
fastapi_blog/: __init__.py  main.py  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
tests/: test_main.py
